--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "homepage": "https://github.com/betrybe/sd-0x-block8-project-js-unit-test#readme",
   "devDependencies": {
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-trybe-fundamentals": "1.1.1",
+    "eslint-plugin-import": "^2.27.5",
     "jest": "24.9.0"
   }
 }
