--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-trybe-fundamentals": "1.1.1",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-sonarjs": "^0.19.0",
     "jest": "24.9.0"
   }
 }
